[package]
name = "project-wordclash"
version = "0.1.0"
authors = ["Maciej Bereda <mb341429@students.mimuw.edu.pl>", "Maciej Mućka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = "0.11"