[package]
name = "project-wordclash"
version = "0.1.0"
authors = ["Maciej Bereda <mb341429@students.mimuw.edu.pl>", "Maciej Mućka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
poise = "0.2.1"
serde_json = "1.0.81"
serde = "1.0.137"
dashmap = { version = "5.3", features = ["serde"] }
rand = "0.8.5"